# conducteo

./: CMakeLists.txt  DebianInstaller.cmake  LinuxInstaller.cmake  MacInstaller.cmake  README.md  RefreshIcon.nsh  Versions.cmake  WinInstaller.cmake  build-deb.sh
debian/: changelog  conducteo.1  conducteo.desktop  conducteo.manpages  conducteo.xml  control  copyright  postinst
debian/source/: include-binaries  options
documentation/: documentation.docx
documentation/interop/: interop_conducteo_v7.docx
documentation/quickstart/: demo.c2d  quickstart.docx
documentation/tutorial/: tutorial.docx
documentation/tutorial/acroter/: Tutorial_1.c2d  Tutorial_2.c2d
documentation/tutorial/building/: Tutorial_3.c2d  Tutorial_4.c2d
documentation/tutorial/crawl/: Tutorial_5.c2d
documentation/tutorial/door/: with_door.c2d  without_door.c2d
documentation/tutorial/high_floor/: Tutorial_6.c2d  Tutorial_7.c2d  Tutorial_8.c2d
documentation/tutorial/intermediate_floor/: Tutorial_10.c2d  Tutorial_9.c2d
documentation/tutorial/intermediate_floor_envs/: Tutorial_11.c2d  Tutorial_12.c2d
documentation/tutorial/low_floor/: Tutorial_13.c2d  Tutorial_14.c2d  Tutorial_15.c2d
documentation/tutorial/low_floor_crawl/: Tutorial_16.c2d  Tutorial_17.c2d
documentation/tutorial/low_floor_on_earth/: Tutorial_18.c2d  Tutorial_19.c2d
documentation/tutorial/low_floor_surelevated/: Tutorial_20.c2d  Tutorial_21.c2d
documentation/tutorial/refend/: Tutorial_22.c2d  Tutorial_23.c_2d
documentation/tutorial/wall/: Tutorial_24.c2d  Tutorial_25.c2d
documentation/tutorial/wall_details/: Tutorial_26.c2d  Tutorial_27.c_2d
documentation/tutorial/window_frame/: Tutorial_28.c2d
documentation/tutorial/window_glass/: Tutorial_29.c2d
documentation/tutorial/window_wall/: Tutorial_30.c2d
include/: ApplicationFactory.h  MainMenu.h  MainWindow.h  Preferences.h
include/actions/: ActionsManager.h  Observable.h  Observer.h  UserAction.h
include/actions/boundary-conditions/: CreateBoundaryCondition.h  DeleteBoundaryCondition.h  SetBoundaryConditionColor.h  SetBoundaryConditionDescription.h  SetBoundaryConditionName.h  SetBoundaryConditionResistance.h  SetBoundaryConditionRh.h  SetBoundaryConditionTemperature.h  StorePhysicAction.h  UnsetAllBoundaryConditions.h
include/actions/environments/: SetEnvironmentDescription.h  UnsetAllEnvironments.h
include/actions/materials/: CreateCategory.h  CreateMaterial.h  DeleteCategory.h  DeleteMaterial.h  RenameCategory.h  SetMaterialColor.h  SetMaterialConductivity.h  SetMaterialDescription.h  SetMaterialEmissivity.h  SetMaterialMu.h  SetMaterialName.h  ToogleMaterialFavorite.h
include/actions/model/: AddAnnotation.h  AddCircle.h  AddDxf.h  AddEllipse.h  AddImage.h  AddPoint.h  AddPolyline.h  AddRectangle.h  BringDownImage.h  BringDownVolume.h  BringUpImage.h  BringUpVolume.h  Copy2dModelTo1dModel.h  DeleteDxf.h  DeleteImage.h  DeletePoint.h  DeleteVolumes.h  ImportVolumesFromXml.h  RemoveAnnotation.h  ResizeImage.h  RotateVolumes.h  SendToBackImage.h  SendToBackVolume.h  SendToFrontImage.h  SendToFrontVolume.h  SetBoundaryConditionFromSelection.h  SetEnvironmentFromSelection.h  SetMaterialFromSelection.h  SetSurfaceBoundaryCondition.h  SetSurfaceEnvironment.h  SetVolumeMaterial.h  SetVolumesMeshSize.h  TranslateImage.h  TranslateVolumeBorder.h  TranslateVolumeCorner.h  TranslateVolumes.h  UpdateAnnotationPoints.h  UpdateRectangleGeometry.h  UpdateTextAnnotationContent.h
include/computation/: ComputationReporter.h  ComputationThread.h  CouplingCoefficientReporter.h  PsiReporter.h  ValidationsThread.h
include/databases/: BoundaryConditions.h  BoundaryConditionsObserver.h  Environments.h  Materials.h  MaterialsObserver.h
include/errors/: ErrorHandler.h
include/geometry/: Arc.h  GeometryTools.h  Line.h  Path.h  Point.h
include/importer/: ThermImporter.h
include/model/: Annotation.h  Circle.h  DxfContent.h  DxfData.h  Ellipse.h  Image.h  ImageData.h  Model.h  Rectangle.h  Surface.h  Volume.h
include/numeric/: Cell.h  CouplingCoefficient.h  CouplingCoefficientComputation.h  EnvironmentResult.h  Mesh.h
include/physics/: AirCavityFromMesh.h  BoundaryCondition.h  Environment.h  Material.h  RegularAirCavity.h  UnregularAirCavity.h
include/plugins/: En13370Plugin.h  HeatFlowComputerPlugin.h
include/reports/: Report.h  ReportContent.h
include/tests/: Tests.h
include/tools/: Singleton.h  ToolBox.h  UiTools.h  ZipArchive.h
install/: model_2_en.docx  model_fr.docx  rt2012.db
install/examples/: Exemple_1.c2d  Exemple_10.c2d  Exemple_2.c2d  Exemple_4.c2d  Exemple_6.c2d  Exemple_9.c2d
install/exemples/: Exemple_3.c2d  Exemple_5.c2d  Exemple_7.c2d  Exemple_8.c2d
install/templates/: model_2_fr.docx  model_en.docx
install/translations/: empty.json  en.json  fr.json
libs/buttons-tab/include/: ButtonTabs.h  (+1 more)
resources/: conducteo.icns  resources.qrc
resources/windows/: converter.rc
src/: ApplicationFactory.cpp  MainMenu.cpp  MainWindow.cpp  Preferences.cpp  main.cpp
src/actions/: ActionsManager.cpp  Observable.cpp  Observer.cpp  UserAction.cpp
src/computation/: ComputationReporter.cpp  ComputationThread.cpp  CouplingCoefficientReporter.cpp  PsiReporter.cpp  ValidationsThread.cpp
src/databases/: BoundaryConditions.cpp  BoundaryConditionsObserver.cpp  Environments.cpp  Materials.cpp  MaterialsObserver.cpp
src/errors/: ErrorHandler.cpp
src/geometry/: Arc.cpp  GeometryTools.cpp  Line.cpp  Path.cpp  Point.cpp
src/importer/: ThermImporter.cpp
src/model/: Annotation.cpp  Circle.cpp  DxfContent.cpp  DxfData.cpp  Ellipse.cpp  Image.cpp  ImageData.cpp  Model.cpp  Rectangle.cpp  Surface.cpp  Volume.cpp
src/numeric/: Cell.cpp  CouplingCoefficient.cpp  CouplingCoefficientComputation.cpp  Mesh.cpp
src/physics/: AirCavityFromMesh.cpp  BoundaryCondition.cpp  Environment.cpp  Material.cpp  RegularAirCavity.cpp  UnregularAirCavity.cpp
src/plugins/: En13370Plugin.cpp  HeatFlowComputerPlugin.cpp
src/reports/: Report.cpp  ReportContent.cpp  ReportContentUtf8.cpp
src/tests/: Tests.cpp
src/tools/: ToolBox.cpp  UiTools.cpp  ZipArchive.cpp
(+283 files in other folders)
